--- a/Pacman/Pacman.vcxproj.filters
+++ b/Pacman/Pacman.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Inky.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Clyde.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Inky.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Clyde.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
